<resources>
    <string name="app_name">CupoEscolarApp</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="sign_in_email_password">Iniciar Sesión</string>
    <string name="sign_in_google_credentials">Google</string>
    <string name="create_email_account">¿Eres nuevo aquí? Crea tu cuenta</string>
    <string name="prefer">O si lo prefieres</string>
    <string name="validate_input_email">Escribe una cuenta de correo válida</string>
    <string name="validate_input_password">La contraseña debe tener mínimo 8 caracteres</string>
    <string name="validate_input_lng">La latitud debe tener dígitos únicamente</string>
    <string name="validate_input_lat">La longitud debe tener dígitos únicamente</string>
    <string name="validate_input_mobile_phone">Número de teléfono móvil incorrecto</string>
    <string name="validate_input_local_phone">Número de teléfono local incorrecto</string>
    <string name="validate_input_doc_id">El número de identificación de tener dígitos únicamente</string>
    <string name="validate_input_doc_id_type">Este campo es obligatorio si desea actualizar el número de identificación</string>
    <string name="validate_input_first_name">Escribe un nombre válido</string>
    <string name="validate_input_last_name">Escribe un apellido válido</string>
    <string name="validate_input_unidentify">Error diligenciando el campo</string>
    <string name="forget_password">¿Olvidaste tu Contraseña?</string>
    <string name="logo_cupo_escolar_app">Logo Cupo Escolar App</string>
    <string name="sign_in_google">Continuar con Google</string>
    <string name="sign_in_facebook">Continuar con Facebook</string>
    <string name="create_account">Crea tu Cuenta</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="sign_up_email_password">Crea tu Cuenta</string>
    <string name="accept_terms">Al crear la cuenta, aceptas los Términos de servicio y la Política de privacidad de Cupo Escolar App.</string>
    <string name="sign_up_user_succesfully">Enhorabuena! Hemos creado tu usuario correctamente. En breve recibirás un correo electrónico para verificar tu cuenta.</string>
    <string name="sign_up_user_failed">Algo salió mal! Ha ocurrido un error al crear el usuario. Por favor intenta nuevamente mas tarde.</string>
    <string name="search_schools">Buscar Colegios</string>
    <string name="ok">OK</string>
    <string name="errorOnInternetConnection">Algo salió mal! Tu conexión a internet a fallado. Por favor intenta nuevamente cuando se restablezca el servicio.</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="firebase_user_already_registered">The email address is already in use by another account.</string>
    <string name="firebase_user_already_registered_es">Ya te encuentras registrado en Cupo Escolar App!</string>
    <string name="change_email_account">Cambiar cuenta de correo</string>
    <string name="try_later">OK! Intentar mas tarde</string>
    <string name="check_my_email">OK, voy a revisar mi buzón de correo</string>
    <string name="failed_resend_verification_email">Algo salió mal, no fue posible enviar nuevamente el correo electrónico de verificación. Intenta mas tarde.</string>
    <string name="enter_email_resend_password">Escribe tu correo electrónico para reestablecer su contraseña.</string>
    <string name="resend_verification_email">Enviar Correo de Verificación nuevamente</string>
    <string name="got_email">Ya lo tengo</string>
    <string name="sent_email_restore_password">Te enviamos un correo electrónico para que puedas restablecer su contraseña</string>
    <string name="verify_my_email">Corregir mi correo electrónico</string>
    <string name="failed_send_password_reset_email">Algo salió mal! No fue posible enviar correo electrónico para restablecer tu password</string>
    <string name="email_password_incorrects">Correo electrónico y/o password incorrectos. Por favor valida tus datos.</string>
    <string name="try_again">Validar e intentar de nuevo</string>
    <string name="try_another_email_account">Intentar con otra cuenta de correo</string>
    <string name="login">Iniciar Sesión</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="resend_verify_email">Reenviar correo de verificación</string>
    <string name="sent_verify_email">En breve recibirás nuevamente un correo electrónico para verificar tu cuenta.</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_nav_dashboard">Dashboard</string>
    <string name="menu_nav_notifications">Notificaciones</string>
    <string name="menu_nav_search_schools">Buscar Colegios</string>
    <string name="menu_nav_enrolls">Inscripciones</string>
    <string name="students">Estudiantes</string>
    <string name="config_account">Configurar Cuenta</string>
    <string name="click_to_change_avatar">Haz click para cambiar tu Avatar</string>
    <string name="first_and_last_name">Nombre y Apellido</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="recommends_app">Recomienda Cupo Escolar App</string>
    <string name="send_suggestions">Enviar comentarios</string>
    <string name="share_app">Comparte Cupo Escolar App</string>
    <string name="start">Inicio</string>
    <string name="enroll_students">Estudiantes Inscritos</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notificaciones</string>
    <string name="list_schools">Lista de Colegios</string>
    <string name="closest_schools">Colegios Cercanos</string>
    <string name="doc_id">Documento No</string>
    <string name="address">Dirección</string>
    <string name="local_phone">Fijo Local</string>
    <string name="mobile_phone">Móvil</string>
    <string name="btn_save_attendant_profile_personal_info">Guardar</string>
    <string name="doc_id_type">Tipo Documento</string>
    <string name="genre_male">Hombre</string>
    <string name="genre_female">Mujer</string>
    <string name="birthdate">Fecha de Nacimiento</string>
    <string name="sex">Sexo</string>
    <string name="btn_edit_attendant_profile_personal_info">Editar</string>
    <string name="personal_info">Información Personal</string>
    <string name="contact_info">Información de Contacto</string>
    <string name="ref_point">Punto de Referencia</string>
    <string name="ref_point_summary">Estos valores se obtienen automáticamente del Mapa. Haz click en el botón del Mapa</string>
    <string name="ref_point_description">Descripción</string>
    <string name="btn_get_coords_current_location">Obtener Ubicación</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar</string>
    <string name="select_doc_id">Selecciona el Tipo de Documento:</string>
    <string name="title_activity_current_position_map">Map</string>
    <string name="current_position">Mi Ubicación Actual</string>
    <string name="set_current_position">Establecer Ubicación</string>
    <string name="postal_code">Código Postal</string>
    <string name="city">Ciudad</string>
    <string name="description_ref_position">Asigna un nombre para identificar el Punto de Referencia. Ej: Mi Casa.</string>
    <string name="set_current_location">Establecer Ubicación</string>
    <string name="attendan_profile_updated">Se ha actualizado la información del Perfil Acudiente.</string>
    <string name="doc_type_updated">Se ha actualidado los Tipos de Documento de Identificación.</string>
    <string name="ref_positions_updated_succesfully">Se ha actualizado el Punto de Referencia exitosamente.</string>
    <string name="go_to_set_current_position">OK! Ir a Establecer Ubicación.</string>
    <string name="go_to_granted_permission_location">Permitir acceder a la ubicación del dispositivo</string>
    <string name="close_map">Cerrar Mapa</string>
    <string name="access_location">Acceder a la Ubicación del Dispositivo</string>
    <string name="request_enable_location">Cupo Escolar App solicita la activación del GPS de tu dispositivo. Esto es necesario para establecer las coordenadas del punto de referencia desde el cual se van a georreferencias los colegios mas cercanos.</string>
    <string name="denied_enable_location">Acceso no permitido</string>
    <string name="request_location_denied">No se ha activado el GPS del dispositivo. Esto es necesario para establecer las coordenadas del punto de referencia desde el cual se van a georreferencias los colegios mas cercanos.</string>
    <string name="request_permission_access_location">Cupo Escolar App solicita tu permiso para acceder a la ubicación del dispositivo. Este permiso es necesario para establecer las coordenadas del punto de referencia desde el cual se van a georreferencias los colegios mas cercanos.</string>
    <string name="denied_permission_access_location">Acceso no permitido</string>
    <string name="scholar_info">Información Escolar</string>
    <string name="grade">Grado</string>
    <string name="grade_summary">Selecciona el grado al cual deseas inscribir al estudiante. Este dato se tendrá en cuenta para la búsqueda de colegios.</string>
    <string name="admin_area">Departamento</string>
    <string name="country">País</string>
    <string name="location_failed">Ubicación no disponible</string>
    <string name="location_failed_summary">El servicio de geolocalización no está disponible por el momento. Por favor intenta mas tarde.</string>
    <string name="edit_student">Editar Estudiante</string>
    <string name="change_email_summary">Escribe tu nueva dirección de correo electrónico si deseas cambiarlo. Este proceso requiere dos pasos: Autenticar credenciales y confirmar el nuevo buzón de correo electrónico.</string>
    <string name="change_password_summary">Escribe tu nueva contraseña si deseas cambiarla. Este proceso requiere Autenticar credenciales.</string>
    <string name="change_email">Cambiar Email</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="close_account">Cerrar Cuenta</string>
    <string name="try_again_to_close">Presione nuevamente para salir de la aplicación</string>
    <string name="failed_sent_verify_email">Se ha presentado un error al intentar enviar el email de confirmación.</string>
    <string name="enter_password">Escribe tu contraseña para validar credenciales:</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="password_incorrect_try_again">Su contraseña es incorrecta. Favor validar e intentar nuevamente.</string>
    <string name="password_incorrect">Clave Incorrecta</string>
    <string name="password_changed_successfully">Contraseña cambiada exitosamente</string>
    <string name="password_changed_succesfully_summary">Tu nueva contraseña se ha cambiado exitosamente.</string>
    <string name="new_email_registered_successfully">Hemos registrado tu nueva cuenta exitosamente! El siguiente paso es confirmar el correo electrónico. Hemos enviado un mail de confirmación a tu buzón.</string>
    <string name="confirm_new_email">Confirma tu Nueva cuenta de correo</string>
    <string name="add_student">Agregar Nuevo Estudiante</string>
    <string name="relationship">Parentesco</string>
    <string name="student_name">Nombre del Estudiante</string>
    <string name="main_panel">Panel Principal</string>
    <string name="request_quota_state">Estado actual del cupo solicitado</string>
    <string name="order_by_distance">Por orden de cercanía</string>
    <string name="located_on_the_map">Ubicados en el mapa</string>
</resources>