<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_students"
        android:icon="@drawable/ic_students"
        android:title="@string/students"/>

    <item
        android:id="@+id/menu_item_edit_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/edit_profile"/>

    <item
        android:id="@+id/menu_item_share_app"
        android:icon="@drawable/ic_share"
        android:title="@string/share_app"/>

    <item
        android:id="@+id/menu_item_send_suggestions"
        android:icon="@drawable/ic_comment"
        android:title="@string/send_suggestions"/>

    <item
        android:id="@+id/menu_item_config_account"
        android:icon="@drawable/ic_my_account"
        android:title="@string/config_account"/>

    <item
        android:id="@+id/menu_item_sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/sign_out"/>

</menu>